Fix spacing and change text design

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,10 @@
-.index-header {
+.index-h1 {
+  font-weight: bolder;
+  color: #406882;
   margin-bottom: 2vw;
 }
+.index-h2 {
+  margin-top: 4vw;
+
+}
+
